--- a/gefrustreerd.html
+++ b/gefrustreerd.html
@@ -24,8 +24,12 @@
 
         </nav>
     </header>
+
     <main>
+
+
         <img src="images/baby.png" class="banner" alt="">
+
         <article id="hi">
             <h2> Vergezocht</h2>
             <p> Het was in de omstreken van een gure februaridag rond het middaguur. Mijn zoon lag in zijn kinderwagen te slapen als een oude jamaicaan die teveel Rum achter de ontbrekende kiezen heeft. Ik stapte het gemeenteblik uit met de stramheid van een bejaarde ooievaar. Ik zet mijn welgevormde voet richting het stationsplein. De mensen krioelen door elkaar heen als een sprinkhanenplaag, door God gestuurd om mij iets duidelijk te maken. Hun gezichten, zuur als pakken melk die drie dagen in de verzengende hitte tevergeefs hebben moeten wachten opgedronken te worden. Dankzij een striemende wind geselt de miezerregen mijn gezicht als de zweep van een oud-galeislaaf die in mij zijn vroegere beul denkt te herkennen. Ik ben bezig aan een alles opslorpende queeste naar een vrucht van literaire genialiteit, genaamd Stijloefeningen van de Franse letterenmastodont Raymond Queneau, een man in wiens schaduw hooguit zijn eigen schaduw mag staan. Het boek is even moeilijk vindbaar als een scheet in een bubbelbad, vandaar dat ik mijn geluk hoop te beproeven in de Openbare Bibliotheek van Amsterdam. Om daar te geraken, blijk ik over planken te moeten lopen met aan weerszijden afgronden met een diepte die doet denken aan de ogen van het meisje van Yde. Heipalen beuken als de wanhopige koning van Siam op de deur van zijn ouderlijk huis. Drilboren trillen de grond naar z’n grootje. </p>
@@ -37,6 +41,10 @@
             <p> Later, toen de zon reeds verscheidene graden gedaald was op de monumentale trap van zijn hemelse zegetocht en ik mij wederom had laten vervoeren door een buswagen van dezelfde lijn, schafte ik in een babywinkel op het Bos en Lommerplein, een paar schoenen voor mijn zoon aan. </p>
         </article>
 
+
+        <div class="balk">
+            <div class="scrollbalk" id="scroll"></div>
+        </div>
         <h3>Suggesties</h3>
 
         <div class="container">
@@ -96,5 +104,7 @@
                 </div>
             </div>
         </div>
+
+
     </main>
 </body>
