--- a/nsverhalen.html
+++ b/nsverhalen.html
@@ -19,10 +19,10 @@
             <ul>
                 <li><a href="nsverhalen.html"><img class="ns" src="images/2000px-Logo_NS.svg.png" alt=""> </a></li>
                 <li>
-                    <p>favorieten</p>
+                    <a>favorieten</a>
                 </li>
                 <li>
-                    <p>account</p>
+                    <a class="login">account</a>
                 </li>
 
             </ul>
@@ -51,34 +51,17 @@
     <main>
 
         <div class="sortcontainer">
-            <button class="sort">Alles</button>
+            <button class="sort">
+                Lengte</button>
             <button class="sort">A-Z</button>
-
+            <button class="sort">A-Z</button>
             <div class="search">
                 <input class="searchInput" type="text" name="" placeholder="Zoek op trefwoorden">
 
                 <button class="searchButton" href="#">
                     <svg class="zoekknop" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 110.11 98.34">
                         <defs>
-                            <style>
-                                .cls-1 {
-                                    fill: #fff;
-                                    stroke-miterlimit: 10;
-                                }
 
-                                .cls-1,
-                                .cls-2 {
-                                    stroke: #fff;
-                                }
-
-                                .cls-2 {
-                                    fill: none;
-                                    stroke-linecap: round;
-                                    stroke-linejoin: round;
-                                    stroke-width: 9px;
-                                }
-
-                            </style>
                         </defs>
                         <title>zoekknop</title>
                         <g id="Layer_2" data-name="Layer 2">
@@ -97,24 +80,6 @@
                     </g>
                     </svg>
                     <defs>
-                        <style>
-                            .cls-1 {
-                                fill: #fff;
-                                stroke-miterlimit: 10;
-                            }
-
-                            .cls-1,
-                            .cls-2 {
-                                stroke: #fff;
-                            }
-
-                            .cls-2 {
-                                fill: none;
-                                stroke-linecap: round;
-                                stroke-linejoin: round;
-                            }
-
-                        </style>
                     </defs>
                     <title>Asset 2</title>
                     <g id="Layer_2" data-name="Layer 2">
@@ -143,8 +108,8 @@
 
             </aside>
             <!-- verhalen -->
-            <div class="verhaal">
 
+            <div class="verhaal">
                 <article>
                     <div class="relative">
 
@@ -157,12 +122,15 @@
                     <h2>Vergezocht</h2>
                     <p>Het was in de omstreken van een gure februaridag rond het middaguur. Mijn zoon lag in zijn kinderwagen te slapen als een oude jamaicaan die teveel Rum achter de ontbrekende kiezen heeft. Ik stapte het gemeenteblik uit met de stramheid van een bejaarde ooievaar. Ik zet mijn welgevormde voet richting het stationsplein. De mensen krioelen...</p>
                 </article>
+
                 <div class="comments">
                     <p>10 comments</p>
                     <p>500 likes</p>
                     <a class="lezen" href="gefrustreerd.html">Lezen</a>
+
                 </div>
             </div>
+
 
             <div class="verhaal">
 
@@ -1371,33 +1339,6 @@
         </div> -->
         <!-- trein svg -->
         <svg class="mytrain" version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1215.74 79.84" style="enable-background:new 0 0 1215.74 79.84;" xml:space="preserve">
-            <style type="text/css">
-                .st0 {
-                    fill: #253B7C;
-                }
-
-                .st1 {
-                    fill: #56555D;
-                }
-
-                .st2 {
-                    fill: #FFFFFF;
-                }
-
-                .st3 {
-                    fill: #FFCB19;
-                }
-
-                .st4 {
-                    fill: #E8E8EB;
-                }
-
-                .st5 {
-                    fill: none;
-                    stroke: #E8E8EB;
-                    stroke-width: 0.25;
-                    stroke-miterlimit: 10;
-                }
 
             </style>
             <path class="st0" d="M33.49-42.05c-0.38-0.41-0.75-0.83-1.09-1.27c-0.14-0.18-0.26-0.38-0.36-0.58c-0.03,0.06-0.07,0.12-0.09,0.18
