--- a/nsverhalen.html
+++ b/nsverhalen.html
@@ -34,7 +34,7 @@
         <!-- banner foto met titel & search bar -->
 
         <img src="images/banner.png" alt="header">
-        <h1>99 VERHALEN</h1>
+        <h1>99 Verhalen </h1>
 
 
 
